python-compiler/tests/snapshots/lib__strings__string_in_if.snap
---
source: tests/strings.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@str_literal = private unnamed_addr constant [8 x i8] c"Greater\00", align 1
@int_format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@str_literal.1 = private unnamed_addr constant [14 x i8] c"Less or equal\00", align 1
@int_format_string.2 = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string.3 = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string.4 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1

define i32 @main() {
entry:
  %x = alloca i64, align 8
  store i64 9221120237041090565, ptr %x, align 4
  %x1 = load i64, ptr %x, align 4
  %check_qnan = and i64 %x1, 9221120237041090560
  %is_float = icmp ne i64 %check_qnan, 9221120237041090560
  %i64_to_f64 = bitcast i64 %x1 to double
  %extract_payload = and i64 %x1, 281474976710655
  %sign_bit = lshr i64 %extract_payload, 47
  %is_negative = icmp eq i64 %sign_bit, 1
  %sign_extend = or i64 %extract_payload, -281474976710656
  %signed_payload = select i1 %is_negative, i64 %sign_extend, i64 %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %final_payload = select i1 %is_float, double %i64_to_f64, double %payload_to_f64
  %cmptmp = fcmp ogt double %final_payload, 3.000000e+00
  %bool_payload = zext i1 %cmptmp to i64
  %pyobject_bool = or i64 9221401712017801216, %bool_payload
  %check_qnan2 = and i64 %pyobject_bool, 9221120237041090560
  %is_float3 = icmp ne i64 %check_qnan2, 9221120237041090560
  %i64_to_f644 = bitcast i64 %pyobject_bool to double
  %extract_payload5 = and i64 %pyobject_bool, 281474976710655
  %sign_bit6 = lshr i64 %extract_payload5, 47
  %is_negative7 = icmp eq i64 %sign_bit6, 1
  %sign_extend8 = or i64 %extract_payload5, -281474976710656
  %signed_payload9 = select i1 %is_negative7, i64 %sign_extend8, i64 %extract_payload5
  %payload_to_f6410 = sitofp i64 %signed_payload9 to double
  %final_payload11 = select i1 %is_float3, double %i64_to_f644, double %payload_to_f6410
  %to_bool = fcmp one double %final_payload11, 0.000000e+00
  br i1 %to_bool, label %then, label %else

then:                                             ; preds = %entry
  %malloc_str = call ptr @malloc(i64 8)
  %memcpy_str = call ptr @memcpy(ptr %malloc_str, ptr @str_literal, i64 8)
  %ptr_to_int = ptrtoint ptr %malloc_str to i64
  %ptr_payload = and i64 %ptr_to_int, 281474976710655
  %pyobject_string = or i64 9221683186994511872, %ptr_payload
  %check_qnan12 = and i64 %pyobject_string, 9221120237041090560
  %is_float13 = icmp ne i64 %check_qnan12, 9221120237041090560
  %tag_bits = and i64 %pyobject_string, 1970324836974592
  %tag = lshr i64 %tag_bits, 48
  %is_bool = icmp eq i64 %tag, 1
  %is_string = icmp eq i64 %tag, 2
  %is_list = icmp eq i64 %tag, 3
  %map_bool = select i1 %is_bool, i64 2, i64 %tag
  %map_string = select i1 %is_string, i64 3, i64 %map_bool
  %map_list = select i1 %is_list, i64 4, i64 %map_string
  %final_tag = select i1 %is_float13, i64 1, i64 %map_list
  %check_qnan14 = and i64 %pyobject_string, 9221120237041090560
  %is_float15 = icmp ne i64 %check_qnan14, 9221120237041090560
  %i64_to_f6416 = bitcast i64 %pyobject_string to double
  %extract_payload17 = and i64 %pyobject_string, 281474976710655
  %sign_bit18 = lshr i64 %extract_payload17, 47
  %is_negative19 = icmp eq i64 %sign_bit18, 1
  %sign_extend20 = or i64 %extract_payload17, -281474976710656
  %signed_payload21 = select i1 %is_negative19, i64 %sign_extend20, i64 %extract_payload17
  %payload_to_f6422 = sitofp i64 %signed_payload21 to double
  %final_payload23 = select i1 %is_float15, double %i64_to_f6416, double %payload_to_f6422
  %is_int = icmp eq i64 %final_tag, 0
  %is_string24 = icmp eq i64 %final_tag, 3
  br i1 %is_string24, label %print_string, label %check_int

else:                                             ; preds = %entry
  %malloc_str25 = call ptr @malloc(i64 14)
  %memcpy_str26 = call ptr @memcpy(ptr %malloc_str25, ptr @str_literal.1, i64 14)
  %ptr_to_int27 = ptrtoint ptr %malloc_str25 to i64
  %ptr_payload28 = and i64 %ptr_to_int27, 281474976710655
  %pyobject_string29 = or i64 9221683186994511872, %ptr_payload28
  %check_qnan30 = and i64 %pyobject_string29, 9221120237041090560
  %is_float31 = icmp ne i64 %check_qnan30, 9221120237041090560
  %tag_bits32 = and i64 %pyobject_string29, 1970324836974592
  %tag33 = lshr i64 %tag_bits32, 48
  %is_bool34 = icmp eq i64 %tag33, 1
  %is_string35 = icmp eq i64 %tag33, 2
  %is_list36 = icmp eq i64 %tag33, 3
  %map_bool37 = select i1 %is_bool34, i64 2, i64 %tag33
  %map_string38 = select i1 %is_string35, i64 3, i64 %map_bool37
  %map_list39 = select i1 %is_list36, i64 4, i64 %map_string38
  %final_tag40 = select i1 %is_float31, i64 1, i64 %map_list39
  %check_qnan41 = and i64 %pyobject_string29, 9221120237041090560
  %is_float42 = icmp ne i64 %check_qnan41, 9221120237041090560
  %i64_to_f6443 = bitcast i64 %pyobject_string29 to double
  %extract_payload44 = and i64 %pyobject_string29, 281474976710655
  %sign_bit45 = lshr i64 %extract_payload44, 47
  %is_negative46 = icmp eq i64 %sign_bit45, 1
  %sign_extend47 = or i64 %extract_payload44, -281474976710656
  %signed_payload48 = select i1 %is_negative46, i64 %sign_extend47, i64 %extract_payload44
  %payload_to_f6449 = sitofp i64 %signed_payload48 to double
  %final_payload50 = select i1 %is_float42, double %i64_to_f6443, double %payload_to_f6449
  %is_int51 = icmp eq i64 %final_tag40, 0
  %is_string52 = icmp eq i64 %final_tag40, 3
  br i1 %is_string52, label %print_string56, label %check_int53

ifcont:                                           ; preds = %print_end57, %print_end
  ret i32 0

check_int:                                        ; preds = %then
  br i1 %is_int, label %print_int, label %print_float

print_int:                                        ; preds = %check_int
  %to_int = fptosi double %final_payload23 to i64
  %printf_int = call i32 (ptr, ...) @printf(ptr @int_format_string, i64 %to_int)
  br label %print_end

print_float:                                      ; preds = %check_int
  %printf_float = call i32 (ptr, ...) @printf(ptr @float_format_string, double %final_payload23)
  br label %print_end

print_string:                                     ; preds = %then
  %extract_ptr_payload = and i64 %pyobject_string, 281474976710655
  %payload_to_ptr = inttoptr i64 %extract_ptr_payload to ptr
  %printf_string = call i32 (ptr, ...) @printf(ptr @string_format_string, ptr %payload_to_ptr)
  br label %print_end

print_end:                                        ; preds = %print_string, %print_float, %print_int
  br label %ifcont

check_int53:                                      ; preds = %else
  br i1 %is_int51, label %print_int54, label %print_float55

print_int54:                                      ; preds = %check_int53
  %to_int58 = fptosi double %final_payload50 to i64
  %printf_int59 = call i32 (ptr, ...) @printf(ptr @int_format_string.2, i64 %to_int58)
  br label %print_end57

print_float55:                                    ; preds = %check_int53
  %printf_float60 = call i32 (ptr, ...) @printf(ptr @float_format_string.3, double %final_payload50)
  br label %print_end57

print_string56:                                   ; preds = %else
  %extract_ptr_payload61 = and i64 %pyobject_string29, 281474976710655
  %payload_to_ptr62 = inttoptr i64 %extract_ptr_payload61 to ptr
  %printf_string63 = call i32 (ptr, ...) @printf(ptr @string_format_string.4, ptr %payload_to_ptr62)
  br label %print_end57

print_end57:                                      ; preds = %print_string56, %print_float55, %print_int54
  br label %ifcont
}

declare ptr @malloc(i64)

declare ptr @memcpy(ptr, ptr, i64)

declare i32 @printf(ptr, ...)
