python-compiler/tests/snapshots/lib__strings__string_in_loop.snap
---
source: tests/strings.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@str_literal = private unnamed_addr constant [15 x i8] c"Loop iteration\00", align 1
@int_format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1

define i32 @main() {
entry:
  %i = alloca i64, align 8
  store i64 9221120237041090560, ptr %i, align 4
  br label %loop_cond

loop_cond:                                        ; preds = %add_merge, %entry
  %i1 = load i64, ptr %i, align 4
  %check_qnan = and i64 %i1, 9221120237041090560
  %is_float = icmp ne i64 %check_qnan, 9221120237041090560
  %i64_to_f64 = bitcast i64 %i1 to double
  %extract_payload = and i64 %i1, 281474976710655
  %sign_bit = lshr i64 %extract_payload, 47
  %is_negative = icmp eq i64 %sign_bit, 1
  %sign_extend = or i64 %extract_payload, -281474976710656
  %signed_payload = select i1 %is_negative, i64 %sign_extend, i64 %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %final_payload = select i1 %is_float, double %i64_to_f64, double %payload_to_f64
  %cmptmp = fcmp olt double %final_payload, 3.000000e+00
  %bool_payload = zext i1 %cmptmp to i64
  %pyobject_bool = or i64 9221401712017801216, %bool_payload
  %check_qnan2 = and i64 %pyobject_bool, 9221120237041090560
  %is_float3 = icmp ne i64 %check_qnan2, 9221120237041090560
  %i64_to_f644 = bitcast i64 %pyobject_bool to double
  %extract_payload5 = and i64 %pyobject_bool, 281474976710655
  %sign_bit6 = lshr i64 %extract_payload5, 47
  %is_negative7 = icmp eq i64 %sign_bit6, 1
  %sign_extend8 = or i64 %extract_payload5, -281474976710656
  %signed_payload9 = select i1 %is_negative7, i64 %sign_extend8, i64 %extract_payload5
  %payload_to_f6410 = sitofp i64 %signed_payload9 to double
  %final_payload11 = select i1 %is_float3, double %i64_to_f644, double %payload_to_f6410
  %to_bool = fcmp one double %final_payload11, 0.000000e+00
  br i1 %to_bool, label %loop_body, label %loop_exit

loop_body:                                        ; preds = %loop_cond
  %malloc_str = call ptr @malloc(i64 15)
  %memcpy_str = call ptr @memcpy(ptr %malloc_str, ptr @str_literal, i64 15)
  %ptr_to_int = ptrtoint ptr %malloc_str to i64
  %ptr_payload = and i64 %ptr_to_int, 281474976710655
  %pyobject_string = or i64 9221683186994511872, %ptr_payload
  %check_qnan12 = and i64 %pyobject_string, 9221120237041090560
  %is_float13 = icmp ne i64 %check_qnan12, 9221120237041090560
  %tag_bits = and i64 %pyobject_string, 1970324836974592
  %tag = lshr i64 %tag_bits, 48
  %is_bool = icmp eq i64 %tag, 1
  %is_string = icmp eq i64 %tag, 2
  %is_list = icmp eq i64 %tag, 3
  %map_bool = select i1 %is_bool, i64 2, i64 %tag
  %map_string = select i1 %is_string, i64 3, i64 %map_bool
  %map_list = select i1 %is_list, i64 4, i64 %map_string
  %final_tag = select i1 %is_float13, i64 1, i64 %map_list
  %check_qnan14 = and i64 %pyobject_string, 9221120237041090560
  %is_float15 = icmp ne i64 %check_qnan14, 9221120237041090560
  %i64_to_f6416 = bitcast i64 %pyobject_string to double
  %extract_payload17 = and i64 %pyobject_string, 281474976710655
  %sign_bit18 = lshr i64 %extract_payload17, 47
  %is_negative19 = icmp eq i64 %sign_bit18, 1
  %sign_extend20 = or i64 %extract_payload17, -281474976710656
  %signed_payload21 = select i1 %is_negative19, i64 %sign_extend20, i64 %extract_payload17
  %payload_to_f6422 = sitofp i64 %signed_payload21 to double
  %final_payload23 = select i1 %is_float15, double %i64_to_f6416, double %payload_to_f6422
  %is_int = icmp eq i64 %final_tag, 0
  %is_string24 = icmp eq i64 %final_tag, 3
  br i1 %is_string24, label %print_string, label %check_int

loop_exit:                                        ; preds = %loop_cond
  ret i32 0

check_int:                                        ; preds = %loop_body
  br i1 %is_int, label %print_int, label %print_float

print_int:                                        ; preds = %check_int
  %to_int = fptosi double %final_payload23 to i64
  %printf_int = call i32 (ptr, ...) @printf(ptr @int_format_string, i64 %to_int)
  br label %print_end

print_float:                                      ; preds = %check_int
  %printf_float = call i32 (ptr, ...) @printf(ptr @float_format_string, double %final_payload23)
  br label %print_end

print_string:                                     ; preds = %loop_body
  %extract_ptr_payload = and i64 %pyobject_string, 281474976710655
  %payload_to_ptr = inttoptr i64 %extract_ptr_payload to ptr
  %printf_string = call i32 (ptr, ...) @printf(ptr @string_format_string, ptr %payload_to_ptr)
  br label %print_end

print_end:                                        ; preds = %print_string, %print_float, %print_int
  %i25 = load i64, ptr %i, align 4
  %check_qnan26 = and i64 %i25, 9221120237041090560
  %is_float27 = icmp ne i64 %check_qnan26, 9221120237041090560
  %tag_bits28 = and i64 %i25, 1970324836974592
  %tag29 = lshr i64 %tag_bits28, 48
  %is_bool30 = icmp eq i64 %tag29, 1
  %is_string31 = icmp eq i64 %tag29, 2
  %is_list32 = icmp eq i64 %tag29, 3
  %map_bool33 = select i1 %is_bool30, i64 2, i64 %tag29
  %map_string34 = select i1 %is_string31, i64 3, i64 %map_bool33
  %map_list35 = select i1 %is_list32, i64 4, i64 %map_string34
  %final_tag36 = select i1 %is_float27, i64 1, i64 %map_list35
  %lhs_is_string = icmp eq i64 %final_tag36, 3
  %both_strings = and i1 %lhs_is_string, false
  br i1 %both_strings, label %str_concat, label %arithmetic

str_concat:                                       ; preds = %print_end
  %extract_ptr_payload37 = and i64 %i25, 281474976710655
  %payload_to_ptr38 = inttoptr i64 %extract_ptr_payload37 to ptr
  %lhs_len = call i64 @strlen(ptr %payload_to_ptr38)
  %rhs_len = call i64 @strlen(ptr inttoptr (i64 1 to ptr))
  %total_len = add i64 %lhs_len, %rhs_len
  %total_size = add i64 %total_len, 1
  %malloc_concat = call ptr @malloc(i64 %total_size)
  %memcpy_lhs = call ptr @memcpy(ptr %malloc_concat, ptr %payload_to_ptr38, i64 %lhs_len)
  %rhs_dest = getelementptr i8, ptr %malloc_concat, i64 %lhs_len
  %rhs_copy_len = add i64 %rhs_len, 1
  %memcpy_rhs = call ptr @memcpy(ptr %rhs_dest, ptr inttoptr (i64 1 to ptr), i64 %rhs_copy_len)
  %ptr_to_int39 = ptrtoint ptr %malloc_concat to i64
  %ptr_payload40 = and i64 %ptr_to_int39, 281474976710655
  %pyobject_string41 = or i64 9221683186994511872, %ptr_payload40
  br label %add_merge

arithmetic:                                       ; preds = %print_end
  %check_qnan42 = and i64 %i25, 9221120237041090560
  %is_float43 = icmp ne i64 %check_qnan42, 9221120237041090560
  %i64_to_f6444 = bitcast i64 %i25 to double
  %extract_payload45 = and i64 %i25, 281474976710655
  %sign_bit46 = lshr i64 %extract_payload45, 47
  %is_negative47 = icmp eq i64 %sign_bit46, 1
  %sign_extend48 = or i64 %extract_payload45, -281474976710656
  %signed_payload49 = select i1 %is_negative47, i64 %sign_extend48, i64 %extract_payload45
  %payload_to_f6450 = sitofp i64 %signed_payload49 to double
  %final_payload51 = select i1 %is_float43, double %i64_to_f6444, double %payload_to_f6450
  %lhs_is_float = icmp eq i64 %final_tag36, 1
  %result_is_float = or i1 %lhs_is_float, false
  %addtmp = fadd double %final_payload51, 1.000000e+00
  %result_tag = select i1 %result_is_float, i64 1, i64 0
  %is_float_tag = icmp eq i64 %result_tag, 1
  %float_to_i64 = bitcast double %addtmp to i64
  %is_bool52 = icmp eq i64 %result_tag, 2
  %is_string53 = icmp eq i64 %result_tag, 3
  %is_list54 = icmp eq i64 %result_tag, 4
  %tag_temp1 = select i1 %is_bool52, i64 1, i64 0
  %tag_temp2 = select i1 %is_string53, i64 2, i64 %tag_temp1
  %internal_tag = select i1 %is_list54, i64 3, i64 %tag_temp2
  %payload_to_i64 = fptosi double %addtmp to i64
  %payload_masked = and i64 %payload_to_i64, 281474976710655
  %tag_shifted = shl i64 %internal_tag, 48
  %with_qnan = or i64 9221120237041090560, %tag_shifted
  %nanboxed = or i64 %with_qnan, %payload_masked
  %pyobject = select i1 %is_float_tag, i64 %float_to_i64, i64 %nanboxed
  br label %add_merge

add_merge:                                        ; preds = %arithmetic, %str_concat
  %add_result = phi i64 [ %pyobject_string41, %str_concat ], [ %pyobject, %arithmetic ]
  store i64 %add_result, ptr %i, align 4
  br label %loop_cond
}

declare ptr @malloc(i64)

declare ptr @memcpy(ptr, ptr, i64)

declare i32 @printf(ptr, ...)

declare i64 @strlen(ptr)
